Fix double scroll

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,15 +1,25 @@
 :host {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    min-height: calc(100vh - 16px);
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  min-height: calc(100vh - 16px);
 }
 
 router-outlet {
-    // padding: 16px 40px;
+  // padding: 16px 40px;
 }
 
 // hub-footer {
 //     position: relative;
 // }
+
+@media (max-width: 575px) {
+  :host {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    min-height: calc(100vh - 97px);
+  }
+}
