--- a/src/app/find-activities/activity-list/activity-list.component.less
+++ b/src/app/find-activities/activity-list/activity-list.component.less
@@ -54,7 +54,7 @@ nz-header {
     display: flex;
     gap: 8px;
     flex-direction: column;
-    height: calc(100vh - 160px) !important;
+    height: calc(100vh - 230px) !important;
     padding: 0;
   }
 }
